--- a/main.html
+++ b/main.html
@@ -8,6 +8,65 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+
+   <!-- Header -->
+   <header>
+      <h1>Inception</h1>
+      <p>A mind-bending sci-fi thriller directed by Christopher Nolan.</p>
+   </header>
+
+   <!-- Navigation -->
+   <nav>
+      <p>Navigate:</p>
+      <a id="nav-actor" href="#actor">Actors</a>
+      <a id="nav-quote" href="#quote">Quotes</a>
+   </nav>
+
+   <!-- Summary -->
+   <section>
+      <h2>Summary</h2>
+      <p>
+         Inception follows Dom Cobb, a skilled thief who steals secrets from within the subconscious during the dream
+         state.
+         To earn his freedom, he is tasked with the seemingly impossible—planting an idea into someone's mind.
+         This gripping story explores the nature of dreams, reality, and the power of the subconscious.
+      </p>
+   </section>
+
+   <!-- Actors Section -->
+   <section id="actor">
+      <h2>Main Actors</h2>
+      <ul>
+         <li>Leonardo DiCaprio as Dom Cobb</li>
+         <li>Joseph Gordon-Levitt as Arthur</li>
+         <li>Elliot Page as Ariadne</li>
+         <li>Tom Hardy as Eames</li>
+         <li>Ken Watanabe as Saito</li>
+      </ul>
+   </section>
+
+   <!-- Quotes Section -->
+   <section id="quote">
+      <h2>Favorite Quote</h2>
+      <blockquote>
+         "You mustn't be afraid to dream a little bigger, darling." – Eames
+      </blockquote>
+   </section>
+
+   <!-- Aside -->
+   <aside>
+      <h3>Additional Info</h3>
+      <p><strong>IMDb Rating:</strong> 8.8/10</p>
+      <p><strong>Release Date:</strong> July 16, 2010</p>
+   </aside>
+
+   <!-- Footer -->
+   <footer>
+      Produced by: Emma Thomas
+   </footer>
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
