--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
    </nav>
 
    <!-- Summary -->
-   <section>
+   <section id="summary">
       <h2>Summary</h2>
       <p>
          Inception follows Dom Cobb, a skilled thief who steals secrets from within the subconscious during the dream
