--- a/main.html
+++ b/main.html
@@ -23,16 +23,16 @@
       <a id="nav-quote" href="#quote">Quotes</a>
    </nav>
 
-   <!-- Summary -->
-   <section id="summary">
-      <h2>Summary</h2>
+   <!-- Summary (using <details> and <summary>) -->
+   <details>
+      <summary>Summary</summary>
       <p>
          Inception follows Dom Cobb, a skilled thief who steals secrets from within the subconscious during the dream
          state.
          To earn his freedom, he is tasked with the seemingly impossible—planting an idea into someone's mind.
          This gripping story explores the nature of dreams, reality, and the power of the subconscious.
       </p>
-   </section>
+   </details>
 
    <!-- Actors Section -->
    <section id="actor">
@@ -40,9 +40,7 @@
       <ul>
          <li>Leonardo DiCaprio as Dom Cobb</li>
          <li>Joseph Gordon-Levitt as Arthur</li>
-         <li>Elliot Page as Ariadne</li>
-         <li>Tom Hardy as Eames</li>
-         <li>Ken Watanabe as Saito</li>
+         
       </ul>
    </section>
 
@@ -67,7 +65,7 @@
    </footer>
 
 
-    <script type="text/javascript" src="./script.js">
+ <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
