--- a/main.html
+++ b/main.html
@@ -7,41 +7,32 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	
 
    <!-- Header -->
    <header>
       <h1>Inception</h1>
-      <p>A mind-bending sci-fi thriller directed by Christopher Nolan.</p>
    </header>
 
    <!-- Navigation -->
    <nav>
-      <p>Navigate:</p>
       <a id="nav-actor" href="#actor">Actors</a>
       <a id="nav-quote" href="#quote">Quotes</a>
    </nav>
 
    <!-- Summary (using <details> and <summary>) -->
-   <details>
+   
       <summary>Summary</summary>
       <p>
          Inception follows Dom Cobb, a skilled thief who steals secrets from within the subconscious during the dream
          state.
-         To earn his freedom, he is tasked with the seemingly impossible—planting an idea into someone's mind.
-         This gripping story explores the nature of dreams, reality, and the power of the subconscious.
+       
       </p>
-   </details>
+   
 
    <!-- Actors Section -->
    <section id="actor">
-      <h2>Main Actors</h2>
-      <ul>
-         <li>Leonardo DiCaprio as Dom Cobb</li>
-         <li>Joseph Gordon-Levitt as Arthur</li>
-         
-      </ul>
+   <p>Leonardo DiCaprio as Dom Cobb</p>
+   <p>Joseph Gordon-Levitt as Arthur</p>
    </section>
 
    <!-- Quotes Section -->
@@ -54,15 +45,14 @@
 
    <!-- Aside -->
    <aside>
-      <h3>Additional Info</h3>
-      <p><strong>IMDb Rating:</strong> 8.8/10</p>
-      <p><strong>Release Date:</strong> July 16, 2010</p>
+      <p><b>IMDb Rating:</b> 8.8/10</p>
    </aside>
 
    <!-- Footer -->
    <footer>
       Produced by: Emma Thomas
    </footer>
+
 
 
  <script type="text/javascript" src="./script.js">
